--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,22 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.33.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
     "firebase": "^8.7.1",
     "node-sass": "^6.0.1",
     "prop-types": "^15.8.0",
+    "query-string": "^7.1.0",
+    "querystring": "^0.2.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^2.0.3",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-grid-carousel": "^1.0.1",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
