--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,6 @@ uri = 'mongodb+srv://gaurang:G@ghthakkar5418@cluster0.7kakw.mongodb.net/arshelf?
 CLOUDINARY_CLOUD_NAME=gaurangt54
 CLOUDINARY_API_KEY=126526846311242
 CLOUDINARY_API_SECRET=9VJHxdt8pOaAmGyK2EOmgAnFE1U
+
+RAZORPAY_KEY_ID = rzp_test_pygzrAIRgaw3lM
+RAZORPAY_SECRET = dPMOcZO4VTXpFvkefekrhb82
