--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "formidable": "^2.0.1",
     "googleapis": "^82.0.0",
     "json2csv": "^5.0.6",
     "jsonwebtoken": "^8.5.1",
@@ -25,6 +26,8 @@
     "nodemon": "^2.0.7",
     "objects-to-csv": "^1.3.6",
     "pg": "^8.6.0",
+    "razorpay": "^2.8.1",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0"
   }
 }
