--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,9 @@
     "react-slick": "^0.28.1",
     "sass": "^1.44.0",
     "slick-carousel": "^1.8.1",
+    "three": "^0.138.0",
+    "three-gltf-exporter": "0.0.1",
+    "three-orbitcontrols": "^2.110.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
