--- a/backend/package.json
+++ b/backend/package.json
@@ -10,19 +10,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1110.0",
+    "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.3.1",
+    "file-type": "^17.1.1",
     "formidable": "^2.0.1",
     "googleapis": "^82.0.0",
-    "json2csv": "^5.0.6",
+    "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
+    "multer": "^1.4.4",
+    "multiparty": "^4.2.3",
     "node-cron": "^3.0.0",
-    "nodemailer": "^6.6.3",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.7",
     "objects-to-csv": "^1.3.6",
     "pg": "^8.6.0",
